tests/reject/toplevel_let_in.alg
sort S;
op f : S → S;
var x : S;

let y = f(x) in f(y);
